# SYNAPSE

./: .env.example  .gitignore  DEMO_SCRIPT.md  Dockerfile  JUDGE_SUBMISSION.md  Makefile  NETWORK_FIX.md  PROMPTS.md  README.md  docker-compose.yml  fly.toml  nginx.conf  railway.json  render.yaml  vercel.json
.claude/: settings.local.json
backend/: .dockerignore  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: auth.py  care_circle.py  health.py  ingest.py  intelligence.py  records.py  reports.py  score.py  timeline.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: session.py
backend/app/intelligence/: brief.py  cascade.py  client.py  coach.py  doctor.py  lab.py  patterns.py  simulator.py  triage.py  vision.py  voice.py  whisper.py
backend/app/intelligence/prompts/: brief.md  cascade.md  doctor_prep.md
backend/app/ml/: anomaly.py  baselines.py  correlation.py
backend/app/models/: __init__.py  event.py  health_metric.py  intelligence.py  records.py  user.py
backend/app/services/: seed.py  synthetic.py
backend/tests/: conftest.py  test_api.py  test_ml.py
data/: synthetic_generator.py
frontend/: .dockerignore  .env.production  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.tsbuildinfo  vercel.json
frontend/src/: App.tsx  main.tsx
frontend/src/lib/: api.ts  toast.ts  types.ts  utils.ts
frontend/src/pages/: Auth.tsx  BodyTwin.tsx  CareCircle.tsx  Dashboard.tsx  DoctorMode.tsx  Labs.tsx  Meals.tsx  Medications.tsx  Mind.tsx  Patterns.tsx  Sleep.tsx  (+7 more)
(+9 files in other folders)
